k8s/apps/dagu/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dagu
  namespace: dagu
  annotations:
    gatus.home-operations.com/endpoint: |
      alerts:
        - type: pushover
spec:
  selector:
    app.kubernetes.io/name: dagu
  ports:
    - name: http
      port: 80
      targetPort: 8080
