k8s/apps/dagu/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dagu
  namespace: dagu
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Dagu"
    gethomepage.dev/description: "Workflow scheduler"
    gethomepage.dev/group: "infrastructure"
    gethomepage.dev/icon: "sh-dagu.svg"
    gethomepage.dev/href: "https://dagu.item.fyi"
    gethomepage.dev/siteMonitor: "http://dagu.dagu.svc.cluster.local"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=dagu"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`dagu.item.fyi`)
      middlewares:
        - name: authentik
          namespace: authentik
      services:
        - name: dagu
          port: 80
  tls: {}
